Finish local demo (docker-compose) build test.
